k8s/overlays/local/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-auth-ingress
spec:
  rules:
    - host: smart-auth.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-auth-api
                port:
                  number: 80
